iRedMail-0.9.6:
    * Supports new distribution release:
        + OpenBSD 6.0. OpenBSD 5.9 is not supported anymore.
        + FreeBSD 11.0.
        + Ubuntu 16.10. WARNING: Ubuntu 16.10 will end of life in July 2017,
          Ubuntu 16.04 LTS edition is recommended for a production server.

    * Improvements:
        - Use rsyslog (requires version 8.x) instead of internal logging system
          for Dovecot on CentOS 7 and Ubuntu 16.04, 16.10.

          rsyslog is default syslog program on CentOS, Debian and Ubuntu.
          With rsyslog, we're able to discard log messages which matches
          given regular expressions if it produces too fast. for example,
          HAProxy performs health check every few seconds for POP3/IMAP (and
          other) services, we can easily discard those health check related
          logs to save disk space.

        - Switch Awstats user authentication from SQL/LDAP to basic auth based
          on file, Awstats is now available for both Apache and Nginx.
        - Installer:
            + Able to choose not to install web server and web applications.

        - Nginx:
            - Add HSTS header for Roundcube, iRedAdmin, SOGo.
            - Add sample config files to run Roundcube, iRedAdmin, SOGo as a
              subdomain.

        - Roundcube webmail:
            - Enable plugin `enigma` by default for PGP encryption.
              WARNING: The plugin uses gpg binary on the server and stores all
              keys (including private keys of the users) on the server.
              Encryption/decryption is done server-side. So, this plugin
              is for users that trust the server.

              If you get error `Identity must have a user name defined` while
              first trying to generate gpg key, please add a name for your
              email account in Roundcube: `Settings -> Identities`.

        - SOGo:
            - List all contacts by default in SOGo global address book.

        - FreeBSD: