@@ -84,8 +84,12 @@ elif [ X"${DISTRO}" == X'OPENBSD' ]; then
 fi
 
 export HTTPD_CONF_DIR="${HTTPD_CONF_ROOT}/conf.d"
+export HTTPD_CONF_DIR_AVAILABLE_VHOSTS="${HTTPD_CONF_ROOT}/sites-available"
+export HTTPD_CONF_DIR_ENABLED_VHOSTS="${HTTPD_CONF_ROOT}/sites-enabled"
+
 export NGINX_CONF="${HTTPD_CONF_ROOT}/nginx.conf"
-export NGINX_CONF_DEFAULT="${HTTPD_CONF_DIR}/00-default.conf"
+export NGINX_CONF_SITE_DEFAULT="${HTTPD_CONF_DIR_AVAILABLE_VHOSTS}/00-default.conf"
+export NGINX_CONF_SITE_DEFAULT_SSL="${HTTPD_CONF_DIR_AVAILABLE_VHOSTS}/00-default-ssl.conf"
 export NGINX_CONF_TMPL_DIR="${HTTPD_CONF_ROOT}/templates"
 
 export NGINX_MIME_TYPES="${HTTPD_CONF_ROOT}/mime.types"
