@@ -1,0 +1,2 @@
+access_log PH_HTTPD_LOG_ACCESSLOG;
+error_log PH_HTTPD_LOG_ERRORLOG;
