@@ -1,0 +1,1 @@
+sendfile on;
