@@ -1,0 +1,2 @@
+# Hide Nginx version number
+server_tokens off;
