@@ -7,25 +7,9 @@ events {
 }
 
 http {
-    access_log PH_HTTPD_LOG_ACCESSLOG;
-    error_log PH_HTTPD_LOG_ERRORLOG;
-
     include       PH_NGINX_MIME_TYPES;
     default_type  application/octet-stream;
 
-    # Hide Nginx version number
-    server_tokens off;
-
-    gzip on;
-    keepalive_timeout 600;
-    sendfile on;
-
-    client_max_body_size 12m;
-    types_hash_max_size 2048;
-
-    upstream php_workers {
-        server PH_PHP_FASTCGI_SOCKET_FULL;
-    }
-
     include PH_HTTPD_CONF_DIR/*.conf;
+    include PH_HTTPD_CONF_DIR_ENABLED_VHOSTS/*.conf;
 }
