@@ -1,31 +1,6 @@
 #
 # Note: This file must be loaded before other virtual host config files,
 #
-# HTTP
-server {
-    # Listen on ipv4
-    listen PH_HTTPD_PORT;
-    # Listen on ipv6.
-    # Note: this setting listens on both ipv4 and ipv6 with Nginx release
-    #       shipped in some Linux/BSD distributions.
-    #listen [::]:PH_HTTPD_PORT;
-    server_name _;
-
-    root PH_HTTPD_DOCUMENTROOT;
-    index index.php index.html;
-
-    # Enable Roundcube/SOGo/iRedAdmin in http mode if working with HAProxy
-    # with SSL termination enabled.
-    #include PH_NGINX_CONF_TMPL_DIR/roundcube.tmpl;
-    #include PH_NGINX_CONF_TMPL_DIR/sogo.tmpl;
-    #include PH_NGINX_CONF_TMPL_DIR/iredadmin.tmpl;
-    #include PH_NGINX_CONF_TMPL_DIR/awstats.tmpl;
-
-    include PH_NGINX_CONF_TMPL_DIR/php-catchall.tmpl;
-    include PH_NGINX_CONF_TMPL_DIR/redirect_to_https.tmpl;
-    include PH_NGINX_CONF_TMPL_DIR/misc.tmpl;
-}
-
 # HTTPS
 server {
     listen PH_HTTPS_PORT;
